# Side_project_RPG

./: README.md  pyproject.toml
pyqt6_text=based_rpg/: __init__.py  main.py  text_blocks.py
tests/: test_pyqt6_text=based_rpg.py
