[tool.poetry]
name = "pyqt6_Text=Based_RPG"
version = "0.1.0"
description = ""
authors = ["KaineKriegar <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
